--- a/client/src/sass/_header.scss
+++ b/client/src/sass/_header.scss
@@ -2,28 +2,42 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-
+  padding: 2rem;
+  .logo {
+    h1 {
+      a:link, a:active {
+        text-decoration: none;
+        color: rgb(3, 5, 33);
+        font-size: 3rem;
+        font-weight: 600;
+      }
+      a:hover, a:visited{
+        color: rgb(3, 5, 33);
+        font-weight: 600;
+      }
+    }
+  }
   &__nav{
     ul {
       display: flex;
       justify-content: space-between;
       align-items: center;
       list-style: none;
-      padding: 0;
-      margin: 0;
-
       li {
-        a {
-          color: #333;
+        a:link, a:active {
+          transition: all 0.3s ease-in;
+          color: rgb(3, 5, 33);
           text-decoration: none;
-          padding: 0.5rem;
-          font-size: 1.2rem;
+          padding: 2rem;
+          font-size: 2rem;
         }
         a:hover,
         a:visited{
           color: rgb(3, 5, 33);
-          font-weight: 700;
+          font-weight: 600;
+        }
+        .active {
+          border-bottom: 3px solid rgb(3, 5, 33);
         }
       }
     }
