--- a/client/src/sass/_jobs.scss
+++ b/client/src/sass/_jobs.scss
@@ -9,55 +9,167 @@ $secondary-text: #ffffff;
 $white: #ffffff;
 $gray: #eeeeee;
 
-.job__card{
+.jobs {
+  padding-top: 2rem;
+  padding-bottom: 4.8rem;
+  display: flex;
+  gap: 4rem;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  font-size: 1.8rem;
+  position: relative;
+  &__filter {
+    max-width: 30rem;
+    position: sticky;
+    top: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 3rem;
     background-color: $white;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
-    position: relative;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
-    &:hover{
-        box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    &__title{
+
+    .filter__active {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      text-transform: lowercase;
+      .filter__active__item {
+        gap: 1rem;
+        background-color: #eeeeee;
         font-size: 1.2rem;
-        font-weight: 700;
-        margin-bottom: 10px;
-    }
-    &__company{
-        font-size: 1rem;
-        font-weight: 400;
-        margin-bottom: 10px;
-    }
-    &__location{
-        font-size: 1rem;
-        font-weight: 400;
-        margin-bottom: 10px;
-    }
-    &__type{
-        font-size: 1rem;
-        font-weight: 400;
-        margin-bottom: 10px;
-    }
-    &__logo{
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        overflow: hidden;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        padding: 0.5rem 1rem;
+        border-radius: 100vh;
+        display: inline-block;
+        cursor: pointer;
+        border: 1px solid #c0c0c0;
+        .filter__btn {
+          background-color: transparent;
+          border: none;
+          font-size: 1.6rem;
+          margin-left: 1rem;
         }
+      }
     }
-    &__btn{
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
+    &:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .form__options {
+      input {
+        width: 100%;
+      }
+      display: block;
+    }
+
+    .filter__checkBox {
+      display: flex;
+      flex-direction: column;
+      justify-items: center;
+      gap: 0.5rem;
+
+      .check__box {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        cursor: pointer;
+        input {
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  &__cards {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    flex: 1;
+  }
+}
+
+/* JobCard.css */
+.job__card {
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.job__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.job__details {
+  margin-top: 10px;
+}
+
+.job-description {
+  margin-top: 2rem;
+  ol,
+  ul {
+    margin-left: 2.2rem;
+  }
+  display: none;
+  transition: all 2s ease;
+}
+
+.job-description.active {
+  display: block;
+}
+
+.apply__button {
+  margin-top: 20px;
+  a:link,
+  a:visited {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+  }
+  a:hover,
+  a:active {
+    background-color: #2980b9;
+  }
+}
+
+.options {
+  overflow-y: scroll;
+  max-height: 200px;
+  padding: 1rem;
+  border-left: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: none;
+  ul {
+    list-style: none;
+    li {
+      padding: 2px 4px;
+    }
+    li:hover {
+      background-color: #eee;
+    }
+  }
+}
+
+.options.active {
+  display: block;
 }
