--- a/client/src/sass/pages/_jobstatus.scss
+++ b/client/src/sass/pages/_jobstatus.scss
@@ -34,13 +34,13 @@
       padding: 3rem;
       border-radius: 1rem;
 
-      .status__heading{
+      .status__heading {
         display: inline-block;
         font-size: 2.2rem;
         font-weight: 600;
         margin-bottom: 2rem;
       }
-      &--applied, &--offered, &--progress{
+      &--categories {
         background-color: #f5f5f5;
         padding: 2rem;
         border-radius: 1rem;
@@ -58,11 +58,11 @@
           display: flex;
           justify-content: space-between;
         }
+        .job__status--stage {
+          display: inline-block;
+        }
       }
 
-
     }
-
-
   }
 }
