--- a/client/src/sass/style.scss
+++ b/client/src/sass/style.scss
@@ -7,5 +7,6 @@
 @use 'pages/dashboard';
 @use 'pages/profile';
 @use 'pages/jobstatus';
+@use 'components/homeHeader';
 @use 'pages/auth';
 @use 'footer';
