--- a/client/src/sass/pages/_auth.scss
+++ b/client/src/sass/pages/_auth.scss
@@ -1,10 +1,25 @@
+.auth {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5%;
+}
+
 .form__container {
+  max-width: 30rem;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-size: 1.6rem;
-  gap: 2rem;
-  .signup, .login {
+  gap: 1rem;
+  padding: 3rem;
+  background-color: #fefefe;
+  border-radius: 1rem;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+  .signup,
+  .login {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -18,42 +33,43 @@
     flex-direction: column;
     width: 100%;
     input {
+      border: 2px solid #e2e8f0;
       width: 100%;
     }
   }
-  .btn {
-    width: 100%;
-  }
 
+  a:link,
+  a:visited {
+    color: #000;
+  }
+  a:hover,
+  a:active {
+    color: #3b82f6;
+  }
 }
 
 .outh__btn {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  .btn {
     display: flex;
-    gap: 1rem;
-
-    .google {
-      background-color: #fff;
-      color: #000;
-      border: 1px solid #000;
-      border-radius: 4px;
-      padding: 8px 16px;
-      margin: 1rem 0;
-      font-size: 16px;
-      cursor: pointer;
-      text-transform: uppercase;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .github {
-      background-color: #000;
-      color: #fff;
-      border: 1px solid #000;
-      border-radius: 4px;
-      padding: 8px 16px;
-      margin: 1rem 0;
-      font-size: 16px;
-      cursor: pointer;
-      text-transform: uppercase;
-      transition: all 0.3s ease-in-out;
-    }
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 14px;
+    background-color: #fff;
+    color: #000;
+    border: 1px solid #000;
+    border-radius: 4px;
+    padding: 8px 16px;
+    margin: 1rem 0;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
   }
+  img {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+}
