--- a/client/src/sass/pages/_dashboard.scss
+++ b/client/src/sass/pages/_dashboard.scss
@@ -5,9 +5,6 @@
   gap: 2rem;
   padding: 2rem;
 
-  .home__heading {
-    font-size: 4rem;
-  }
   .job__stats {
     display: flex;
     flex-direction: column;
@@ -16,6 +13,7 @@
   }
   .candidate__status {
     display: flex;
+    background-color: #fafafa;
     flex-direction: column;
     gap: 1.4rem;
     flex: 1;
@@ -28,7 +26,7 @@
       gap: 1rem;
       flex: 1;
       font-size: 2rem;
-      .label:hover{
+      .label:hover {
         cursor: pointer;
         color: #020529;
         text-decoration: underline;
