--- a/client/src/sass/pages/_profile.scss
+++ b/client/src/sass/pages/_profile.scss
@@ -9,21 +9,37 @@
     font-size: 4rem;
   }
   &__form {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 2rem;
-    width: 100%;
-    max-width: 50rem;
-
-    .information {
-      width: 100%;
+    &--container {
       display: flex;
       flex-direction: column;
-      div {
+      align-items: start;
+      width: 100%;
+      max-width: 50rem;
+
+      .form__heading {
+        font-size: 2.4rem;
+        margin: 2rem 0;
+      }
+    }
+    &--update {
+      box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+      padding: 3rem;
+      border-radius: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      gap: 2rem;
+      width: 100%;
+      max-width: 50rem;
+      .information {
         width: 100%;
         display: flex;
         flex-direction: column;
+        div {
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+        }
       }
     }
 
