--- a/client/src/sass/pages/_profile.scss
+++ b/client/src/sass/pages/_profile.scss
@@ -1,71 +1,126 @@
-.profile {
+.profile__form {
+  margin: 4.8rem 0;
   display: flex;
-  padding: 4.8rem;
   flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  font-size: 1.6rem;
-  &__heading {
-    font-size: 4rem;
-  }
-  &__form {
-    &--container {
+  gap: 4.8rem;
+
+  .profile__form--container {
+    .profile__subheading {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      font-size: 2rem;
+      padding-bottom: 1rem;
+      border-bottom: 2px solid rgb(192, 192, 192);
+    }
+
+    .profile__form--update {
+      padding: 2rem 0;
+      margin-left: 1rem;
       display: flex;
       flex-direction: column;
-      align-items: start;
-      width: 100%;
-      max-width: 50rem;
-
-      .form__heading {
-        font-size: 2.4rem;
-        margin: 2rem 0;
+      gap: 2rem;
+      .name {
+        display: flex;
+        align-items: center;
+        gap: 6rem;
+      }
+      label {
+        font-weight: 500;
+        font-size: 1.6rem;
       }
     }
-    &--update {
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-      padding: 3rem;
-      border-radius: 1rem;
+
+    .information {
       display: flex;
-      flex-direction: column;
-      align-items: start;
+      align-items: center;
+      flex-wrap: wrap;
       gap: 2rem;
-      width: 100%;
-      max-width: 50rem;
-      .information {
-        width: 100%;
+      justify-content: space-between;
+      .preferred__name {
+        font-size: 1.6rem;
+      }
+      div:first-child {
         display: flex;
         flex-direction: column;
-        div {
-          width: 100%;
-          display: flex;
-          flex-direction: column;
+        gap: 0.4rem;
+
+        p {
+          font-size: 1.4rem;
+          color: #475569;
         }
       }
     }
+  }
 
-    .name {
-      display: flex;
-      gap: 2rem;
-      flex-direction: row;
+  .preview-resume {
+    a:link,
+    a:visited {
+      text-decoration: none;
+      color: #475569;
+      border: 2px solid #475569;
+      padding: 1rem 2rem;
+      border-radius: 6px;
+      font-size: 1.2rem;
+      transition: all 0.2s;
+      font-weight: 500;
+    }
+    a:hover,
+    a:active {
+      background-color: #475569;
+      color: #fff;
     }
   }
-  &__btn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 2rem;
-    background-color: #020529;
-    color: #ffffff;
+  .profile__btn {
+    align-self: flex-end;
+    padding: 1rem 2rem;
+    border-radius: 6px;
+    background-color: #030712;
+    color: #fff;
+    font-weight: 400;
+    font-size: 1.4rem;
     text-transform: uppercase;
-    font-size: 1.6rem;
-    padding: 1rem 0;
-    border-radius: 1rem;
+    border: 2px solid #030712;
+    transition: all 0.2s;
+    &:hover {
+      background-color: #fff;
+      color: #030712;
+    }
   }
 }
+
+.password__button {
+  a:link,
+  a:visited {
+    text-decoration: none;
+    color: #475569;
+    border: 2px solid #475569;
+    padding: 1rem 2rem;
+    border-radius: 6px;
+    font-size: 1.2rem;
+    transition: all 0.2s;
+    font-weight: 500;
+  }
+  a:hover,
+  a:active {
+    background-color: #475569;
+    color: #fff;
+  }
+}
+
 .sign__out {
-  cursor: pointer;
-  color: #ff3333;
-  border-bottom: 1px solid #ff3333;
+  align-self: flex-end;
+  padding: 1rem 2rem;
+  border-radius: 6px;
+  background-color: transparent;
+  color: #e11d48;
+  font-weight: 400;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  border: 2px solid #e11d48;
+  transition: all 0.2s;
+  &:hover {
+    background-color: #e11d48;
+    color: #fff;
+  }
 }
