--- a/client/src/sass/_layout.scss
+++ b/client/src/sass/_layout.scss
@@ -1,7 +1,6 @@
 .home {
   padding: 2rem;
-  font-size: 2.4rem;
-
+  font-size: 2rem;
   ul {
     list-style: none;
     display: flex;
@@ -20,10 +19,7 @@
         display: inline-block;
         width: 100%;
         text-decoration: none;
-        color: #334155;
-      }
-      .nav__home__link:hover {
-        color: #0f172a;
+        color: #d4d4d8;
       }
       .nav__home__link.active {
         border-radius: 0.6rem;
