--- a/client/src/sass/pages/_auth.scss
+++ b/client/src/sass/pages/_auth.scss
@@ -1,13 +1,11 @@
+
 .auth {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5%;
+  margin-top: 5rem;
 }
-
 .form__container {
-  max-width: 30rem;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,12 +15,11 @@
   padding: 3rem;
   background-color: #fefefe;
   border-radius: 1rem;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
   .signup,
   .login {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.8rem;
   }
   .name {
     display: flex;
@@ -34,7 +31,7 @@
     width: 100%;
     input {
       border: 2px solid #e2e8f0;
-      width: 100%;
+      width: 40rem;
     }
   }
 
@@ -71,5 +68,24 @@
   img {
     width: 1.8rem;
     height: 1.8rem;
+  }
+}
+
+
+.auth__container {
+  display: flex;
+  flex-direction: row;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  align-items: center;
+  height: 60rem;
+  .auth__img {
+    max-width: 42rem;
+    object-fit: cover;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
